# Lab6

./: CMakeLists.txt  Lab6.c
cmake_modules/: FindSDL2TTF.cmake
